# Discord-Bot-for-B40-Server

./: .breakpoints  api.py  chatstatsfunc.py  main.py  pyproject.toml
databases/: chat_leaderboard.json  chat_user_stats.json  member_join.json  member_remove.json  ncounter.json  server_stats.json
