[tool.poetry]
name = "repl_python3_b40-best-bot-ever"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]

[tool.poetry.dependencies]
python = "^3.8"
discord = "^1.7.3"
giphy_client = "^1.0.0"
Flag = "^0.1.1"
pycountry = "^22.1.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
